All page copys updated. Project images update pending.

--- a/dev/assets/contact.pug
+++ b/dev/assets/contact.pug
@@ -11,7 +11,10 @@ block content
 
 					h2.subtitle-block.sub-2.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Contact Us
 
-					h1.title-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Let’s link. Let’s build…
+					h1.title-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") 
+						span._line Let’s link. 
+						
+						span._line Let’s build…
 
 					.arrow-container.jb-cascade(data-cascade="fade-right" data-cascade-delay-mobile="1" data-cascade-delay="1")
 						.arrow-right
