--- a/dev/assets/index.pug
+++ b/dev/assets/index.pug
@@ -22,7 +22,7 @@ block content
 					.lines-wrapper
 
 			.about-title
-				p.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="5" data-cascade-delay="5")  We <br> create and consult for lifestyle cultures and industries such as fashion, hospitality, entertainment and more. 
+				p.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="5" data-cascade-delay="5")  We create and consult for lifestyle rooted companies and organizations.
 
 				p.points.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="6" data-cascade-delay="6") ..
 
