--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -12,19 +12,32 @@ block content
 							div.especific-item.snj-col-md-2
 								+project-box("Client", "PUMA")
 							div.especific-item.offset-md-2.snj-col-md-4
-								+project-box("Project", "High Beams Running Crew",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
+								+project-box("Project", "High Beams - Dubai based Run Crew",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
 								+project-box("Year", "2017-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3.about-wrapper
-					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") High Beams Running Crew
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") High Beams - Dubai based Run Crew
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p High Beams Dubai is the city’s first Run Crew and Sound System. Its membership includes some of city’s top DJs, trainers and creatives. To break away from the mainstream, PUMA encouraged, and entrusted, Jungle Beige to explore the Run Crew concept/movement found in cities like New York and London.
-						p The challenge was building something similar for a transient city where you can’t run outdoors all year long. Our Creative Director, a High Beams founder, and the agency worked with the crew to make these perceived disadvantages something to remix and celebrate.
+						p High Beams Dubai is the city’s first Run Crew and Sound System. Its membership includes some of city’s top DJs, trainers and creatives. To break away from the mainstream, PUMA encouraged, and entrusted, Jungle Beige to explore the Run Crew movement found in cities like New York and London.
+
+						p The challenge was building something similar in a transient city where running outdoors is seasonal. Our Creative Director, a High Beams co-founder, and the agency worked with the crew to get around these perceived disadvantages and create something the community could embrace.
+
+
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p The crew gets its name from the fact that drivers in Dubai flash their high beams at you when you’re driving too slow. And since the crew can’t run outdoors throughout the year, they installed a weekly gym session called Saturday Brunch - brunches being another “Dubai thing”.
-						p Finally, with crew members from all over the world, with different backgrounds, languages, etc., the ethos of the crew is Vibes First. Because if the vibes are right, people can definitely connect, train and party together.
+						p The crew’s name originates from the fact that Dubai drivers flash their high beams if you’re driving too slow. So a name like High Beams ensures that speed is built into the crew’s brand in a locally relevant way. To deal with the extreme weather, the crew installed a weekly indoor session called Saturday Brunch - brunches being another “Dubai thing”.
+
+						p Finally, with crew members from all over the world, with different backgrounds, languages and more, the ethos of High Beams became Vibes First. Because if the vibes are right, people can always connect, train and party together.
+
+						p High Beams Instagram page: 
+							a(href="https://www.instagram.com/highbeamsdubai/" target="_blank" rel="nofollow noopener noreferrer") https://www.instagram.com/highbeamsdubai/
+						
+						p
+							a(href="https://highbeamsdubai.com/" target="_blank" rel="nofollow noopener noreferrer") High Beams website.
+
+
+
 			.p-photo1
 				img(src="./img/projects/high-beams/02_beams.jpg", alt="")
 			.img-wrapper
@@ -51,14 +64,14 @@ block content
 					h3 Future Street Cred
 					h4 Branding & Design
 					a.page_transitioner(href="project-brand-cred.html") See case
-					p.copyright © Copyright 2019
+					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.page_transitioner.more-cases.next-case(href="project-brand-cred.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-				//- p.copyright © Copyright 2019
+				//- p.copyright © Copyright 2020
 	a.page_transitioner.navigation-btn.btn-pages(href="workbranding.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
