--- a/dev/assets/project-brand-cred.pug
+++ b/dev/assets/project-brand-cred.pug
@@ -12,19 +12,31 @@ block content
 							div.especific-item.snj-col-md-2
 								+project-box("Client", "Jungle Beige")
 							div.especific-item.offset-md-2.snj-col-md-4
-								+project-box("Project", "Future Street Cred",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
+								+project-box("Project", "Future Street Cred - streetwear inspired credit cards",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
 								+project-box("Year", "2017",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
+
+
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Future Street Cred
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Future Street Cred - streetwear inspired credit cards
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p At Jungle Beige, our philosophy is that creatives, and creative agencies, should make things simply for the sake of it. We love our client collaborations, but there are often projects that can only exist on their own, without a particular brand or campaign associated with it.
+						p At Jungle Beige, our philosophy is that creatives, and creative agencies, should make things simply for the sake of it. We love our client collaborations, but sometimes there are projects that can only exist on their own, without a brand or campaign tied to it.
 
-						p It’s just expression. It’s just art. And most importantly, it’s enjoyable. It’s this type of spirit that led us to imagine what credit cards would look like if they partnered with some of the world’s best streetwear brands.
+						p It’s just expression. It’s just art. Most importantly, it’s enjoyable. It’s this type of spirit that led us to imagine what credit cards would look like if they partnered with some of the world’s best streetwear brands. The final designs were eventually featured on Hypebeast and Hypebae.
+
+
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p The final designs were eventually featured on Hypebae. Have we seen a streetwear brand and credit card company join forces yet? No, but maybe streetwear or sneaker cryptocurrency will actually be the next thing.
-						p What we’ll certainly continue doing is creating anything, whether it’s a one off project or an entire series, simply because we feel it should exist in the world.
+						p Have we seen a streetwear brand and credit card company join forces yet? No, but maybe streetwear cryptocurrency will actually be the next thing… What we’ll certainly continue doing is creating anything simply because we feel it should exist in the world.
+
+						p
+							a(href="https://hypebeast.com/2017/4/jungle-beige-streetwear-brands-credit-cards" target="_blank" rel="nofollow noopener noreferrer") Hypebeast article.
+
+						p
+							a(href="https://hypebae.com/2017/4/future-street-cred-supreme-kate-moss" target="_blank" rel="nofollow noopener noreferrer") Hypebae article.
+
+ 
+
 			.p-photo1
 				img(src="./img/projects/future-street/02_future.jpg", alt="")
 			.img-wrapper
@@ -50,7 +62,7 @@ block content
 					h3 Suede Guerrillas
 					h4 Campaign & Social Media Strategy
 					a.page_transitioner(href="project-social-suede.html") See case
-					p.copyright © Copyright 2019
+					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.page_transitioner.more-cases.next-case(href="project-social-suede.html")
 						span.light-font.right-translate Next Case
