--- a/dev/assets/project-commerce-amongst.pug
+++ b/dev/assets/project-commerce-amongst.pug
@@ -21,12 +21,20 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Launch & Management of Website
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p Direct to consumer brands like Amongst Few have no choice but to develop an e-commerce game at the highest level. It’s the most important way to connect with consumers around the region, and world.
-						p The challenge, and opportunity, is how to translate what is so carefully curated and crafted in their flagship store into a digital experience. The foundation is always the aesthetics of the site - clean and nuanced like the store itself. We then focus on the user experience. 
+						p Direct to consumer brands like Amongst Few have no choice but to develop an exceptional  e-commerce game. It’s the most important way to connect with consumers around the region, and world. The challenge, and opportunity, is how to translate what is so carefully curated and crafted in their flagship store into a digital experience.
+
+						p The foundation of the site is its aesthetic - clean and nuanced like the brand and store. We then focused on the user experience. While the knowledge, style and warmth of the store staff isn’t easily translated online, we can still provide an efficient and flexible experience - shopping by brand, size, price range and even color.
+
+
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p While the knowledge, style and warmth of the store staff isn’t easily translated online, we can still provide an efficient and flexible experience - shopping by brand, size, price range and even color.
-						p True digital transformation isn’t complete without the other elements of the shopping experience, such as the brand’s social media channels, as well as the visuals, tone and offers of its newsletter. It’s all one ecosystem that is carefully crafted in order to ensure the customer can easily access what they’re looking for, and always come away understanding what the brand is about and can continually offer.
+						p True digital transformation isn’t complete without the other elements of the shopping experience, such as the brand’s social media channels, product and lifestyle visuals and exclusive online offers. It’s all one ecosystem that is carefully crafted in order to ensure the customer can easily access what they’re looking for, and come away fully understanding what the brand is about.
+
+						
+
+						p 
+							a(href="https://www.amongstfew.com/" target="_blank" rel="nofollow noopener noreferrer") Amongst Few website.
 			
+
 
 			.p-photo1
 				img(src="./img/projects/commerce-amongst/2-commerce-amongst-photo.jpg", alt="")
@@ -54,7 +62,7 @@ block content
 					h3 High Beams
 					h4 Branding & Design
 					a.page_transitioner(href="project-brand-beams.html") See case
-					p.copyright © Copyright 2019
+					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.page_transitioner.more-cases.next-case(href="project-brand-beams.html")
 						span.light-font.right-translate Next Case
