--- a/dev/assets/project-event-amongst.pug
+++ b/dev/assets/project-event-amongst.pug
@@ -19,11 +19,20 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Events at Sole DXB & Amongst Few Cafe
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p Amongst Few hasn’t become the region’s premiere streetwear brand on their clothing alone. It’s also because they’ve made it a point to shape and move streetwear culture in Dubai through their activations and events. It’s become the foundation for how Jungle Beige approach all other events - move the needle, or don’t bother.
+						p Amongst Few hasn’t become the region’s premiere streetwear brand on their clothing alone. It’s also because they’ve made it a point to shape and move streetwear culture in Dubai through their activations and events. It’s become the north star for how Jungle Beige approaches the events it curates - move the needle, or don’t bother.
+
 						p At Sole DXB, we made countless visitors to the Amongst Few booth shed nostalgic tears of joy when we recreated the bedroom of a Sneaker/Hip Hop/Grime kid (including a fully functional Nintendo set up). A year later, Amongst Few’s collaboration with The Hundreds led to Sole DXB’s most celebrated art installation - in the most organic way possible.
+
+
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p After selling out of the The Hundreds collab on Friday, we decided to tag “Sold Out” over our own booth (furniture and all) instead of setting up on Saturday with other collections. The community fully embraced this brazen decision and proceeded to use it as their own personal backdrop for IG. All this before “Instagrammable” was thrown around in every marketing meeting.
-						p Amongst Few Cafe has also been home to numerous activations, transforming the frequented cafe to a new experience with each new theme. One night it will be the home of the annual sneaker and streetwear bible, All Gone. The next it will be a Jamaican backyard for the brand’s collaboration with Miss Lily’s. Same place, difference experience, moving the needle… every time.
+						p After selling out of the The Hundreds collab on Friday, we decided to tag “Sold Out” over our own booth (furniture and all) instead of setting up on Saturday. The community fully embraced this brazen decision and proceeded to use it as their own personal backdrop for IG. All this before “Instagrammable” was thrown around in every marketing meeting.
+
+						p Amongst Few Cafe has also been home to numerous activations, transforming the cafe to a new space with each new theme. One night it could be home of the annual sneaker and streetwear bible, All Gone. The next it will be a Jamaican backyard for the brand’s collaboration with Miss Lily’s. Same place, difference experience, moving the needle - every time.
+
+						p 
+							a(href="https://www.amongstfew.com/blogs/features" target="_blank" rel="nofollow noopener noreferrer") Amongst Few events.
+
+
 
 			.p-photo1
 				img(src="./img/projects/event-amongst/2-event-amongst-photo.jpg", alt="")
@@ -53,7 +62,7 @@ block content
 					h3 Amongst Few
 					h4 E-commerce
 					a.page_transitioner(href="project-commerce-amongst.html") See case
-					p.copyright © Copyright 2019
+					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.page_transitioner.more-cases.next-case(href="project-commerce-amongst.html")
 						span.light-font.right-translate Next Case
