--- a/dev/assets/project-manage-coffee.pug
+++ b/dev/assets/project-manage-coffee.pug
@@ -19,14 +19,19 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Instagram Launch & Campaign Videos
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p Cartel Coffee is an Abu Dhabi based shop with a shared penchant for disruption and irreverence, as evident by their controversial name and shark logo. 
+						p Cartel Coffee is an Abu Dhabi based shop with a shared penchant for disruption and irreverence, as evident by their controversial name and shark logo. What does a shark have to do with coffee or cartels? Not much, and yet we totally get it.
+
+						p We planned and produced the coffee shop’s first 3 months of content, focusing on what makes the shop special - their unusual branding and their in-house roasting done by the shop’s Emirati founder. We also pushed to set the standard for coffee shop aesthetics and storytelling, not only in the city, but in the entire region.
 
 
-						p What does a shark have to do with coffee (or cartels)? Not much… and we totally get it. We planned and produced the coffee shop’s first 3 months of content, focusing on what makes the shop special - their unusual branding and their in-house roasting done by the shop’s Emirati founder. 
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p We also pushed to set the standard for coffee shop aesthetics and storytelling, not only in the city, but in the entire region. 
+						p No easy task with so many coffee shops out there, but we stand by our ambition, and its outcome, which includes a Narcos inspired mixed media video, a one take video narrated by the founder and countless photos we would put up against any coffee shop around.
 
-						p No easy task with so many coffee shops out there, but we stand by our ambition, and its outcome, which includes a Narcos inspired mixed media video, a one take video narrated by the founder and countless photos we would put up against any coffee shop around. 
+						p 
+							a(href="https://www.instagram.com/cartelcoffeeroasters/" target="_blank" rel="nofollow noopener noreferrer") Cartel Coffee Instagram Page (managed first 3 months of content).
+
+
+
 			.p-photo1
 				img(src="./img/projects/coffee/2-coffee-photo.jpg", alt="")
 			.img-wrapper
@@ -53,7 +58,7 @@ block content
 					h3 PUMA
 					h4 Event Curation
 					a.page_transitioner(href="project-event-puma.html") See case
-					p.copyright © Copyright 2019
+					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.page_transitioner.more-cases.next-case(href="project-event-puma.html")
 						span.light-font.right-translate Next Case
