--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -20,13 +20,16 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Community & Culture Initiative
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p When Power Horse was ready to distinguish itself from competitors and focus heavily on the pervading lifestyle cultures and movements of the day (namely street culture), we connected the brand with artists and creatives in the community that unquestionably represented the brand’s “Unstoppable You” spirit. 
+						p When Power Horse was ready to focus heavily on the pervading lifestyle cultures and movements of the day (namely street culture), we connected the brand with artists and creatives that unquestionably represented the brand’s “Unstoppable You” spirit.
 
-						p It’s not the easiest job for a brand that virtually had no reputation with this community. Thankfully this world is still about show and prove. So we made sure that our collaborations fundamentally helped artists/athletes in the community get to the next level.
+						p It’s not the easiest job for a brand that virtually had no reputation with this particular community. Thankfully this world is still about show and prove, so we made sure that our collaborations fundamentally helped artists in the community get to the next level. Sometimes it meant helping a local brand’s booth come to life at Sole DXB, and other times it meant helping a DJ host his own show.
+
+
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p Whether it was helping their booth come to life at Sole DXB or helping them tick something off their creative bucket list. Once Power Horse’s intention, and place, in the community was set, we then moved on to establishing a new design language and tone of voice. So while their competitors went extreme, we went more creative (even artsy).
+						p Once Power Horse’s place in the community was clear, we then worked on making design a key trait of the brand’s personality. Art and design is a great equalizer, and this direction allowed us rely on creativity when competitors often relied on budget or reputation.
 
-						p When competitors went mainstream, we went underground. It’s made the difference ever since. 
+						p 
+							a(href="https://www.instagram.com/powerhorse.official/" target="_blank" rel="nofollow noopener noreferrer") Power Horse Instagram page.
 
 			.p-photo1
 				img(src="./img/projects/power-horse/02_power.jpg", alt="")
@@ -56,7 +59,7 @@ block content
 					h3 PUMA
 					h4 Content Creation & Management
 					a.page_transitioner(href="project-manage-puma.html") See case
-					p.copyright © Copyright 2019
+					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.page_transitioner.more-cases.next-case(href="project-manage-puma.html")
 						span.light-font.right-translate Next Case
