--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -13,20 +13,28 @@ block content
 							div.especific-item.snj-col-md-2
 								+project-box("Client", "PUMA")
 							div.especific-item.offset-md-2.snj-col-md-4
-								+project-box("Project", "Suede Guerrillas",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
+								+project-box("Project", "Suede Guerrillas - grassroots marketing initiative",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
 								+project-box("Year", "2017-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 
 
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Suede Guerrillas
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Suede Guerrillas - grassroots marketing initiative
+
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p For PUMA’s Run the Streets campaign, we created the Suede Guerrillas, a group of artists and creatives that authentically embodied the campaign’s ethos.
-						p It was the first long-term micro-influencer campaign to exist in the region, and produced and unprecedented amount of original content and activations - a sort of millennial interpretation of running the streets. In Year 2, the Suede Guerrillas evolved into a regional platform for co-creation anchored by its site, <a href="https://suedeguerrillas.com" target="_blank" rel="nofollow noopener noreferrer">suedeguerrillas.com</a>, which we also designed.
+						p For PUMA’s Run the Streets campaign, we created the Suede Guerrillas, a group of artists and creatives that authentically embodied the campaign’s ethos. It was the first long-term micro-influencer campaign to exist in the region, and it produced an unprecedented amount of original content and activations - a millennial interpretation of “running the streets”.
+
+						p In Year 2, the Suede Guerrillas evolved into a regional platform for co-creation anchored by the website, suedeguerrillas.com, which we also designed. We’re especially proud of the platform because it offers the type of big brand exposure that creatives in cities outside of Dubai can hardly attain, or fathom.
+
+
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p We’re especially proud of the platform because it offers the type of big brand exposure that creatives in cities outside of Dubai can hardly attain, or fathom.
-						p Now an entire region of creatives have a way to continually share ideas and work with PUMA. It’s already led to dozens of co-creations and will continue to do so while the site is live. It’s the type of access and opportunity our younger selves dreamed of, and we’re proud to pay it forward to this generation and beyond.
+						p Now an entire region of creatives have a way to continually share ideas and work with PUMA. It’s already led to dozens of co-creations and will continue to do so while the site is live. It’s the type of access and opportunity our younger selves dreamed of, and we’re proud to pay it forward to this generation.
+
+						p 
+							a(href="https://suedeguerrillas.com/" target="_blank" rel="nofollow noopener noreferrer") Suede Guerrillas website.
+
+
 
 			.p-photo1
 				img(src="./img/projects/suede-guerrilla/suede-photo-2.jpg", alt="")
@@ -53,7 +61,7 @@ block content
 					h3 Power Horse
 					h4 Campaign & Social Media Strategy
 					a.page_transitioner(href="project-social-power.html") See case
-					p.copyright © Copyright 2019
+					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.page_transitioner.more-cases.next-case(href="project-social-power.html")
 						span.light-font.right-translate Next Case
