--- a/dev/assets/workevent.pug
+++ b/dev/assets/workevent.pug
@@ -7,7 +7,7 @@ block content
 
 
 	.sections-p-wrapper.project-bg-event-puma
-		+project-sections("Event Curation", "PUMA Middle East", "01", "project-event-puma.html")
+		+project-sections("Event Curation", "PUMA", "01", "project-event-puma.html")
 	.sections-p-wrapper.project-bg-event-amongst
 		+project-sections("Event Curation", "Amongst Few", "02", "project-event-amongst.html")
 	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
