--- a/dev/assets/_modules/slide-about.pug
+++ b/dev/assets/_modules/slide-about.pug
@@ -1,7 +1,7 @@
 //- component for slide about
 .about-component
 	section.header-about.snj-col-9.offset-1.offset-md-3.snj-col-md-8.snj-col-lg-3.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0")
-		h1.title-block.display-text Founded by brand creators
+		h1.title-block.display-text Led by brand creators
 		h2.subtitle-block.display-text Our DNA
 
 
@@ -11,11 +11,11 @@
 			.line.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="1" data-cascade-delay="1")
 
 		#paragraphs-wrap.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="2")
-			p.about-p.show Jungle Beige was founded in 2016 by Khalid Bin Hadher, Michael Taylor, Florian Moser and B.J. De Guzman. The passion and perseverance required to build culturally relevant brands and communications is in the DNA of our agency, because it’s in the DNA of our founders.
+			p.about-p.show Jungle Beige was launched in 2016 by Khalid Bin Hadher, Michael Taylor, Florian Moser and B.J. De Guzman. The imagination and perseverance needed to build a culturally relevant brand is in the DNA of our agency because it’s in the DNA of our founders.
 
-			p.about-p Khalid has developed numerous brands from scratch, including Bikers Cafe, Airwerks and Myocum. Michael and Florian, along with Khalid, have built Amongst Few, Amongst Few Cafe and Unison Barbershop. B.J. De Guzman is a co-founder of High Beams Dubai.
+			p.about-p Khalid has developed numerous brands from scratch, including Bikers Cafe, Airwerks and Myocum. Michael and Florian, along with Khalid, created Amongst Few, Amongst Few Cafe and Unison Barbershop. B.J. is a co-founder of High Beams Dubai and one of the key architects behind PUMA’s Suede Guerrillas.
 
-			p.about-p This unique background of being founded and led by actual brand creators gives us a complete understanding of what our clients experience and continually strive to achieve. It also means that we have the same intensity for producing work that is authentic to the brand, and revered by its customers. 
+			p.about-p This unique background of being led by actual brand creators gives us a complete understanding of what our clients experience and continually strive to achieve. It also means we have the same intensity for producing work that is authentic to your brand, and revered by your supporters.
 
 		.social-wrapper
 			a.social-link.jb-cascade(data-cascade="fade-up" href="https://www.linkedin.com/company/jungle-beige" target="_blank" rel="nofollow noopener noreferrer")
