--- a/dev/assets/project-event-puma.pug
+++ b/dev/assets/project-event-puma.pug
@@ -21,11 +21,20 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Suede Guerrillas & International Women’s Day
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p Curating an event that looks great, and feels great in terms of vibes, is a big enough challenge. We make it harder on ourselves by trying to make it unprecedented in some sort of way. Thankfully, PUMA has always shared our ambition to make this happen.  
-						p Our first event with PUMA celebrated the Suede Guerrillas and their global Run the Streets campaign. The event featured a secret, tagged up entrance through a sheesha cafe, and it also marked the first time a Secret Walls mural battle ever took place in Dubai. 
+						p Curating an event that looks great, and feels great (in terms of vibes), is a big enough challenge. We make it harder on ourselves by trying to make it unprecedented in some sort of way. Thankfully, PUMA has always shared our ambition to make this happen.
+
+						p Our first event with PUMA celebrated the Suede Guerrillas and their global Run the Streets campaign. The event featured a secret, graffiti tagged entrance through a sheesha cafe, and it also marked the first time a Secret Walls mural battle ever took place in Dubai.
+
+
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p The following year, we celebrated International Women’s Day by capturing the beautiful diversity of women in Dubai in the most inclusive way we could think of. Often brands will have target the same groups or expats because of their consumer strength in the country.
-						p For International Women’s Day, that wasn’t good enough for us. Instead, we celebrated nearly 30 different women, and their respective nationalities, as it’s this type of diversity that makes Dubai so special. Each woman was shot for their own portrait, with makeup colors from their particular country, and then displayed every single portrait at a party that featured an all-female DJ lineup.
+						p The following year, we celebrated International Women’s Day by capturing the beautiful diversity of Dubai women in the most inclusive way we could think of. Often brands will have target the same groups or expats because of their consumer strength in the country.
+
+						p For International Women’s Day, and for us, that wasn’t good enough. Instead, we celebrated nearly 30 different women, and their respective nationalities, as it’s this type of diversity that makes Dubai so special. Each woman was shot for their own portrait (with makeup colors from their country’s flag). Every single portrait was then displayed at a party hosted by 3 female DJs.
+
+						p 
+							a(href="https://en.vogue.me/culture/this-omani-photographers-empowering-exhibition-celebrates-women/" target="_blank" rel="nofollow noopener noreferrer") Vogue article about International Women’s Day concept and event.
+
+
 			
 			.p-photo1
 				img(src="./img/projects/event-puma/DSCF6253.jpg", alt="")
@@ -82,7 +91,7 @@ block content
 					h3 Amongst Few
 					h4 Event Curation
 					a.page_transitioner(href="project-event-amongst.html") See case
-					p.copyright © Copyright 2019
+					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.page_transitioner.more-cases.next-case(href="project-event-amongst.html")
 						span.light-font.right-translate Next Case
