--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -22,14 +22,18 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Instagram Launch & Management 
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p We worked with PUMA Middle East to create the brand’s first non-global Instagram account: <a href="https://www.instagram.com/pumame/" target="_blank" rel="nofollow noopener noreferrer">@pumame.</a> It’s something we had to pitch internally to PUMA global, and it came with significant risks.
+						p We worked with PUMA Middle East to create the brand’s first non-global Instagram account: @pumame. It’s something we had to pitch internally to PUMA global, and it came with significant risks. Basically, if we messed up, we jeopardized the chance of other countries or regions in the world getting their own IG account.
 
-						p Basically, if we messed up, we jeopardized the chance of other countries or regions in the world that wanted their own IG account. Thankfully, we did the opposite and the success of <a href="https://www.instagram.com/pumame/" target="_blank" rel="nofollow noopener noreferrer">@pumame</a> paved the way for all the other local accounts that now exist, from India to South Africa.
+						p Thankfully, we did the opposite and the success of @pumame paved the way for the other local accounts that now exist, from India to South Africa. We have the privilege of managing the @pumame account completely: strategy, content production, community management and reporting. Something that keeps us informed and sharp on a global level.
+
+
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p We have the privilege of managing the <a href="https://www.instagram.com/pumame/" target="_blank" rel="nofollow noopener noreferrer">@pumame</a> account completely: strategy, content production, community management and reporting. Something that keeps us informed and sharp on a global level. 
+						p In just a few years, the account reached over 100k followers and continues to “put on” for the region’s talent, from photographers to musicians. It’s a project, and relationship, that has significantly helped establish our place in the market. More importantly, it has helped strengthen our relationship with the regional community of athletes, artists and creatives that we consider peers and allies.
 
-						p In just a few years, the account reached over 100k followers and continues to “put on” for the region’s talent, from photographers to musicians. It’s a project, and relationship, that has significantly helped establish our place in the market. More importantly, it has helped strengthen our relationship with the regional community of athletes, artists and creatives that we consider peers and allies. 
+						p 
+							a(href="https://www.instagram.com/pumame/" target="_blank" rel="nofollow noopener noreferrer") PUMA Middle East Instagram page.
 			
+
 
 			.p-photo1
 				img(src="./img/projects/content-puma/02_puma_management.jpg", alt="")
@@ -59,7 +63,7 @@ block content
 					h3 Cartel Coffee
 					h4 Content Creation & Management
 					a.page_transitioner(href="project-manage-coffee.html") See case
-					p.copyright © Copyright 2019
+					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.page_transitioner.more-cases.next-case(href="project-manage-coffee.html")
 						span.light-font.right-translate Next Case
