--- a/dev/scss/views/_contact.scss
+++ b/dev/scss/views/_contact.scss
@@ -36,6 +36,12 @@
 		@media(min-width: 1282px){
 			margin-bottom: 0;
 		}
+
+		._line{
+			@media (max-width: 767px){
+				display: block;
+			}
+		}
 	}
 	.subtitle-block{
 		color: $dark-brown;
