--- a/dev/assets/project-event-amongst.pug
+++ b/dev/assets/project-event-amongst.pug
@@ -15,6 +15,8 @@ block content
 								+project-box("Project", "Events at Sole DXB & Amongst Few Cafe",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
 								+project-box("Year", "2016-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
+
+
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Events at Sole DXB & Amongst Few Cafe
@@ -45,8 +47,11 @@ block content
 			
 			
 			//- video
-			section.video-wrapper.eventAmongst-video-mini.snj-col-12
+			section#projectVideo01.video-wrapper.eventAmongst-video-mini.snj-col-12
 				+video-player("./img/projects/event-amongst/9-event-amongst-mini.jpg","./img/projects/event-amongst/9-event-amongst-video.mp4")
+
+			section#projectVideo02.video-wrapper.eventAmongst2-video-mini.snj-col-12
+				+video-player("./img/projects/event-amongst/10-event-amongst-mini.jpg","./img/projects/event-amongst/10-event-amongst-video.mp4")
 			
 
 			//- footer
