--- a/dev/scss/modules/_slider.scss
+++ b/dev/scss/modules/_slider.scss
@@ -63,9 +63,9 @@
 				position: relative;
 				// height: 100%;
 				width: 100%;
-				left: 50%;
-				top: 50%;
-				transform: translate(-50%, -50%)
+				// left: 50%;
+				// top: 50%;
+				// transform: translate(-50%, -50%)
 			}
 			@media(min-width: 768px){			
 				// margin-right: 4.325vw;
