Updated home shader. Thanks after email UI: removed twitter link. Removed unused assets in img folder.

--- a/dev/assets/thanks.pug
+++ b/dev/assets/thanks.pug
@@ -10,8 +10,10 @@ block content
 				.social-wrapper
 					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3" href="https://www.linkedin.com/company/jungle-beige" target="_blank" rel="nofollow noopener noreferrer")
 							+link-icon
-					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4" href="https://twitter.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
+					
+					//- a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4" href="https://twitter.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
 							+tw-icon
+					
 					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="5" data-cascade-delay="5" href="https://instagram.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
 							+ins-icon
 			a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
