New shaders added; enabled on mobile too. Double check for errors pending. Share graph and favicon pending, alt text for all images pending too.

--- a/dev/assets/about.pug
+++ b/dev/assets/about.pug
@@ -6,7 +6,7 @@ block content
 		.row
 			//- background shader wrapper
 			.background-wrapper.about-bg.shader-container
-				img.shader-img(src="img/about_shader_bg_opt.png", alt="Night city background")
+				img.shader-img(src="img/shaders/About-Shader.png", mobsrc="img/shaders/mobile/About-Shader.png", alt="Night city background")
 
 			.about-wrapper
 				//- Slider Controller
