--- a/dev/assets/index.pug
+++ b/dev/assets/index.pug
@@ -3,7 +3,7 @@ extends _templates/layout.pug
 block content
 	.index-wrapper
 		.background-wrapper.home-bg.shader-container
-			img.shader-img(src="img/Desert_Still_opt.jpg", alt="Man running on desert distortioned background")
+			img.shader-img(src="img/Desert_Still_opt.jpg", mobsrc="img/shaders/mobile/Home.jpg", alt="Man running on desert distortioned background")
 
 
 		//- mobile display
