--- a/dev/assets/workmanagement.pug
+++ b/dev/assets/workmanagement.pug
@@ -2,8 +2,8 @@ extends _templates/layout.pug
 
 
 block content
-	.worksections-bg.shader-container
-		img.shader-img(src="img/ourwork_sec_bg_opt.jpg", alt="Distortioned background")
+	#work-sections-management.worksections-bg.shader-container
+		img.shader-img(src="img/shaders/Content-Creation_Management-Shader-Negro.jpg", mobsrc="img/shaders/Content-Creation_Management-Shader-Negro.jpg", alt="Distortioned background")
 
 			
 	.sections-p-wrapper.project-bg-puma
