--- a/dev/assets/workcommerce.pug
+++ b/dev/assets/workcommerce.pug
@@ -2,8 +2,8 @@ extends _templates/layout.pug
 
 
 block content
-	.worksections-bg.shader-container
-		img.shader-img(src="img/ourwork_sec_bg_opt.jpg", alt="Distortioned background")
+	#work-sections-commerce.worksections-bg.shader-container
+		img.shader-img(src="img/shaders/E-commerce-Shader-Negro.jpg", mobsrc="img/shaders/E-commerce-Shader-Negro.jpg", alt="Distortioned background")
 
 
 	.sections-p-wrapper.project-bg-commerce-amongst.full-screen
