--- a/dev/assets/workevent.pug
+++ b/dev/assets/workevent.pug
@@ -2,8 +2,8 @@ extends _templates/layout.pug
 
 
 block content
-	.worksections-bg.shader-container
-		img.shader-img(src="img/ourwork_sec_bg_opt.jpg", alt="Distortioned background")
+	#work-sections-event.worksections-bg.shader-container
+		img.shader-img(src="img/shaders/Event-Curation-Shader-Negro.jpg", mobsrc="img/shaders/Event-Curation-Shader-Negro.jpg", alt="Distortioned background")
 
 
 	.sections-p-wrapper.project-bg-event-puma
