--- a/dev/assets/workstrategy.pug
+++ b/dev/assets/workstrategy.pug
@@ -2,8 +2,8 @@ extends _templates/layout.pug
 
 
 block content
-	.worksections-bg.shader-container
-		img.shader-img(src="img/ourwork_sec_bg_opt.jpg", alt="Distortioned background")
+	#work-sections-strategy.worksections-bg.shader-container
+		img.shader-img(src="img/shaders/Campaign_Social-Media-Shader-Negro.jpg", mobsrc="img/shaders/Campaign_Social-Media-Shader-Negro.jpg", alt="Distortioned background")
 
 
 	.sections-p-wrapper.project-bg-suede
