FRemoved twitter from mobile menu. Lang english added to html tag. Added an extra flag to initialize videos properly on project pages and avoid errors in console.

--- a/dev/assets/_modules/side-nav.pug
+++ b/dev/assets/_modules/side-nav.pug
@@ -13,7 +13,7 @@
 				.social-wrapper
 					a.social-link(href="https://www.linkedin.com/company/jungle-beige" target="_blank" rel="nofollow noopener noreferrer")
 						+link-icon
-					a.social-link(href="https://twitter.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
+					//- a.social-link(href="https://twitter.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
 						+tw-icon
 					a.social-link(href="https://www.instagram.com/junglebeige/" target="_blank" rel="nofollow noopener noreferrer")
 						+ins-icon
