Metatags and share graph image added.

--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -7,16 +7,16 @@ html(class='no-js' lang="en")
 		title Jungle Beige
 
 		//- metatags
-		meta(name='description', content='Page_description')
-		meta(name='subject', content='Page_subject')
-		meta(name="format-detection" content="telephone=no")
+		meta(name='description', content='We create and consult for lifestyle rooted companies and organizations.')
+		//- meta(name='subject', content='Page_subject')
+		//- meta(name="format-detection" content="telephone=no")
 
 		//- Share graphs for social media
-		meta(property="og:url" 			content="PLACE_YOUR_URL")
-		meta(property="og:type" 		content="TYPE")
-		meta(property="og:title" 		content="PLACE_YOUR_TITLE")
-		meta(property="og:description" 	content="PLACE_YOUR_DESCRIPTION")
-		meta(property="og:image" 		content="PLACE_YOUR_IMAGE_URL")
+		meta(property="og:url" 			content="https://andrew.studio/clients/junglebeige-updated/")
+		meta(property="og:type" 		content="website")
+		meta(property="og:title" 		content="Jungle Beige")
+		meta(property="og:description" 	content="We create and consult for lifestyle rooted companies and organizations.")
+		meta(property="og:image" 		content="https://andrew.studio/clients/junglebeige-updated/Share-Graph.png")
 		meta(name="twitter:card", content="summary")
 
 		//- stylesheets
